# mc-mod-manager_poetry

./: README.md  binary.py  pyproject.toml  setup.py  test_test.py
.github/workflows/: build.yaml
mc_mod/: __init__.py  __main__.py  commands.py  dirs.py
mc_mod/choc_mc/: __init__.py
mc_mod/curse_forge/: __init__.py
mc_mod/github/: __init__.py
mc_mod/optifine/: __init__.py
mcmm/: __init__.py  __main__.py  commands.py  dirs.py  plugin.py  plugin_internal.py
mcmm/curse_forge/: __init__.py
mcmm/file/: __init__.py
mcmm/github/: __init__.py
mcmm/modrinth/: __init__.py
mcmm/optifine/: __init__.py
